--- a/style.css
+++ b/style.css
@@ -259,8 +259,15 @@ nav ul li a:hover::after{
    
   }
   .about-section h1{
-      font-size: 60px;
-      font-style: bold;
+      font-size: 30px;
+   
+  }
+  .aboutme h1{
+	  font-size: 25px;
+  }
+  .education h1{
+	  text-align: center;
+	  font-size: 230px;
   }
   .about-section p{
       font-size: 30px;
@@ -314,11 +321,11 @@ nav ul li a:hover::after{
 	flex: 50%;
   }
   .about{
-	padding-right: 30px;
+	padding-right: 0px;
   }
   .about p{
 	text-align: justify;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
   }
   .about a{
 	display: inline-block;
@@ -454,15 +461,14 @@ footer p{
 		
 	  
 	  .jumbotron-portfolio {
-		margin: 0px 0;
-		padding-top: 20px;
-		background-color: rgb(224, 227, 228);
+		margin: 1px 0;
+		padding-top: 30px;
+		background-color: rgb(212, 223, 228);
 		background-image: transarent;
 	  }
 	  
 	  .jumbotron-portfolio h3 {
-		margin-bottom: 30px;
-		font-size: 60px;
+		font-size: 30px;
 		text-align: center;
 	  }
 	  
@@ -484,7 +490,7 @@ footer p{
 	  figure {
 		display: inline-block;
 		align-content: center;
-		margin: 20px; /* adjust as needed */
+		margin: px; /* adjust as needed */
 	}
 	figure img {
 		vertical-align: top;
@@ -566,9 +572,9 @@ footer p{
 	  .bar{
 		background-color: #EEE;
 		padding: 2px;
-		border-radius: 15px;
-		margin-bottom: 5px;
-		font-size: 14px;
+		border-radius: 13px;
+		margin-bottom: 3px;
+		font-size: 12px;
 		color: #FFF;
 		font-weight: bold;
 		text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
@@ -577,7 +583,7 @@ footer p{
 		content:  attr(data-skill);
 		background-color: #85b306;
 		display: inline-block;
-		padding: 5px 0 5px 10px;
+		padding: 7px 0 6px 11px;
 		border-radius: inherit;
 		animation: load 2s 0s;
 		-webkit-animation: load 2s 0s;
@@ -658,9 +664,16 @@ footer p{
 	positon: absolute;
 }
 .education p{
-	font-size:35px;
+	font-size:25px;
 }
 .education h1{
-	font-size: 30px;
+	font-size: 25px;
 	positon: absolute;
+}
+.ed1 li{
+	font-size: 17px;
+	font-style: italic;
+}
+.hclass{
+	font-size: 30px;
 }
