--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,3 @@
-
-
 *{
 	margin: 0;
 	padding: 0;
@@ -27,7 +25,7 @@ a{
 header{
 	width: 100%;
 	height: 100vh;
-	background-image: url("background.png");
+	background-image: url("../assets/background.png");
 	background-size: cover;
 	position: relative;
     overflow: hidden;
@@ -699,8 +697,6 @@ footer p{
 }
 
 /* Contact Section */
-
-
 .aid{
 	color:black;
 }
