--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,10 @@ body {
   outline: 0 !important;
 }
 
+.projects-list {
+  text-align: justify;
+}
+
 hr {
   box-sizing: content-box;
   height: 0;
@@ -598,8 +602,8 @@ pre code {
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -10px;
+  margin-left: -10px;
 }
 
 .no-gutters {
